[gd_scene load_steps=5 format=3 uid="uid://dwhkq2hyj1phd"]

[ext_resource type="Script" uid="uid://dh4jkac7kqoot" path="res://scenes/interactive/texts/view/text_view_controller.gd" id="1_dm17i"]
[ext_resource type="Theme" uid="uid://v6jg21kfpwcr" path="res://settings/text_view_theme.tres" id="2_plhy6"]
[ext_resource type="PackedScene" uid="uid://bcdby6svlp0fj" path="res://scenes/UI/backgrounds/fade_background.tscn" id="2_rn6c0"]
[ext_resource type="Texture2D" uid="uid://c8p3u734y4jeo" path="res://textures/text/paper_on_wall_view.png" id="4_uhudn"]

[node name="TextView" type="CanvasLayer"]
layer = 60
script = ExtResource("1_dm17i")

[node name="FadeBackground" parent="." instance=ExtResource("2_rn6c0")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_plhy6")

[node name="BackgroundButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
button_mask = 7
flat = true

[node name="TextTexture" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.358
anchor_top = 0.16
anchor_right = 0.642
anchor_bottom = 0.868
offset_left = -0.360046
offset_top = 0.199982
offset_right = 0.359985
offset_bottom = -0.440063
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_uhudn")

[node name="TextName" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.435
anchor_top = 0.176
anchor_right = 0.565
anchor_bottom = 0.222
offset_left = -0.200073
offset_top = -0.0800171
offset_right = 0.199951
offset_bottom = 0.239975
text = "Test
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextContents" type="RichTextLabel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.435
anchor_top = 0.292
anchor_right = 0.565
anchor_bottom = 0.744
offset_left = -0.200073
offset_top = -0.360016
offset_right = 0.199951
offset_bottom = -0.52002
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "Test"

[node name="BackButton" type="Button" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.435
anchor_top = 0.833
anchor_right = 0.565
anchor_bottom = 0.898
offset_left = -0.200073
offset_top = 0.359924
offset_right = 0.199951
offset_bottom = 0.159912
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "BACK_BUTTON"

[connection signal="pressed" from="Control/BackgroundButton" to="." method="_on_background_button_pressed"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_back_button_pressed"]
